# mozuma

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTE.md  Dockerfile  Dockerfile.test  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.in  dev-requirements.txt  index.html  mkdocs.yml  mtcnn.pt  objects.inv  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  sitemap.xml  sync-notebooks.sh  tmp.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md
.github/workflows/: lint.yml  publish.yml
0-docker/: index.html
0-installation/: index.html
1-getting-started/: index.html
2-develop/: index.html
3-mlmodulekit/: index.html
3-mozumakit/: index.html
contributing/0-setup/: index.html
contributing/1-add-a-model/: index.html
css/: mkdocstring.css
docker-torch/: Dockerfile.from-binary  Dockerfile.from-source  Dockerfile.from-wheel  Makefile  README.md
docs/: 0-docker.md  0-installation.md  1-getting-started.ipynb  1-getting-started.md  2-develop.md  3-mlmodulekit.md  3-mozumakit.md  3-write-model.md  ArcFace.md  CLIP.md  CONTRIBUTE.md  DEVELOP.md  DenseNet.md  GETTING_STARTED.md  MTCNN.md  ResNet.md  index.md  pair-notebooks.sh  references.bib  requirements.txt  sync-notebooks.sh
docs/contributing/: 0-setup.md  1-add-a-model.md
docs/examples/: 0-getting-started.ipynb  0-getting-started.md  00-overview.ipynb  00-overview.md  1-overview.ipynb  1-overview.md  arcface.ipynb  arcface.md  image_encoder.py  keyframes.ipynb  keyframes.md  magface.ipynb  magface.md  test_distiluse_multilingual.ipynb  test_distiluse_multilingual.md  text_to_retrieval_with_clip.ipynb  text_to_retrieval_with_clip.md  train_cifar10.ipynb  train_cifar10.md  train_face_age_detection.ipynb  train_face_age_detection.md  train_face_emotion_recognizer.ipynb  train_face_emotion_recognizer.md  vinvl.ipynb  vinvl.md
docs/models/: ArcFace.md  CLIP.md  Classification.md  DenseNet.md  DistiluseMultilingual.md  MTCNN.md  MagFace.md  RPN.md  ResNet.md  VinVL.md  index.md  keyframes.md
docs/references/: callbacks.md  datasets.md  labels.md  options.md  predictions.md  runners.md  states.md  stores.md
examples/: 00-overview.ipynb  arcface.ipynb  magface.ipynb  train_cifar10.ipynb  train_face_age_detection.ipynb  train_face_emotion_recognizer.ipynb
examples/0-getting-started/: index.html
examples/00-overview/: index.html
examples/1-overview/: index.html
examples/arcface/: index.html
examples/keyframes/: index.html
examples/magface/: index.html
examples/test_distiluse_multilingual/: index.html
examples/text_to_retrieval_with_clip/: index.html
examples/train_cifar10/: index.html
examples/train_face_age_detection/: index.html
examples/train_face_emotion_recognizer/: index.html
examples/vinvl/: index.html
mlmodule/tests/: test_torch.py
mlmodule/torch/: __init__.py  base.py
mlmodulekit/: Dockerfile.binaries  Dockerfile.sources  Makefile  README.md
mlmodulekit/scripts/: install-mmcv-from-sources.sh  install-pillow-simd-w-libjpeg-turbo.sh  install-torch-from-sources.sh  install-torchvision-from-sources.sh
models/: index.html
models/ArcFace/: index.html
models/CLIP/: index.html
models/Classification/: index.html
models/DenseNet/: index.html
notebooks/: test_arcface.ipynb  test_keyframes.ipynb  test_magface.ipynb  test_rpn.ipynb  test_vinvl.ipynb  text_to_retrieval_with_clip.ipynb  train_cifar10.ipynb  train_face_emotion_recognizer.ipynb
scripts/: update_public_store.py
search/: search_index.json
tests/: Dockerfile.test  conftest.py  requirements.txt  test_base.py  test_docs.sh  test_models_state_type.py  test_onnx_runner.py  test_pretrained.py  test_pretrained_from_provider.py  test_torch.py
(+449 files in other folders)
