[metadata]
name = mlmodule
version = attr: mlmodule._build_version.BUILD_VERSION
description = 'NN Module repository for the AI Data Platform',
url = 'https://github.com/LSIR/mlmodule'

[options]
include_package_data = True
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    boto3
    click
    requests
    scipy
    torch
    torchvision
    opencv-python-headless
    tqdm
    pytorch-ignite
    dill
    yacs
    ftfy
    regex
    clip @ git+https://github.com/openai/CLIP.git
    facenet-pytorch
    tokenizers
    scikit-learn
python_requires >= 3.7

[options.packages.find]
where = src

[flake8]
exclude =
    build,
    .git,
    .tox,
    venv,
    src/mlmodule/contrib/vinvl/config,
    src/mlmodule/contrib/vinvl/models
max-line-length = 119
extend-ignore = E203
