[metadata]
name = mozuma
version = attr: mozuma._build_version.BUILD_VERSION
description = Model Zoo for Multimedia Applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Distributed Information Systems Laboratory, EPFL
maintainer = Massonnet Stéphane
maintainer_email = stephane.massonnet@epfl.ch
url = https://github.com/mozuma/mozuma
keywords = vision and language, multimedia search, machine-learning
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU :: NVIDIA CUDA :: 11.1
    Environment :: GPU :: NVIDIA CUDA :: 11.3
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia
    Topic :: Multimedia :: Video
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    boto3
    click
    requests
    scipy
    torch
    torchvision
    opencv-python-headless
    tqdm
    pytorch-ignite
    dill
    yacs
    ftfy
    regex
    clip @ git+https://github.com/openai/CLIP.git
    facenet-pytorch
    tokenizers
    scikit-learn
python_requires >= 3.7

[options.packages.find]
where = src

[flake8]
exclude =
    build,
    .git,
    .github,
    .tox,
    venv,
    src/mozuma/contrib/vinvl/config,
    src/mozuma/contrib/vinvl/models
max-line-length = 119
extend-ignore = E203
