[metadata]
name = mozuma
version = attr: mozuma._build_version.BUILD_VERSION
description = 'Model Zoo for Multimedia Applications',
url = 'https://github.com/mozuma/mozuma'

[options]
include_package_data = True
zip_safe = False
packages = find:
package_dir =
    =src
install_requires =
    boto3
    click
    requests
    scipy
    torch
    torchvision
    opencv-python-headless
    tqdm
    pytorch-ignite
    dill
    yacs
    ftfy
    regex
    clip @ git+https://github.com/openai/CLIP.git
    facenet-pytorch
    tokenizers
    scikit-learn
python_requires >= 3.7

[options.packages.find]
where = src

[flake8]
exclude =
    build,
    .git,
    .tox,
    venv,
    src/mozuma/contrib/vinvl/config,
    src/mozuma/contrib/vinvl/models
max-line-length = 119
extend-ignore = E203
